--- a/testbdag/.gitignore
+++ b/testbdag/.gitignore
@@ -26,3 +26,21 @@ dist-ssr
 # Ignore specific file
 .vs
 FileContentIndex
+
+node_modules
+src/.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
