--- a/testbdag/package.json
+++ b/testbdag/package.json
@@ -14,15 +14,23 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "circomlib": "^2.0.5",
+    "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-speech-recognition": "^4.0.1"
+    "react-speech-recognition": "^4.0.1",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@metamask/providers": "^22.1.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "chai": "^4.5.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -30,5 +38,13 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
